--- a/FordSuperheroes/FordSuperheroes/FordSuperheroes.csproj
+++ b/FordSuperheroes/FordSuperheroes/FordSuperheroes.csproj
@@ -14,4 +14,10 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.5" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Update="Models\Hero.cs">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Compile>
+  </ItemGroup>
+
 </Project>
